--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,6 @@ th, td {
 }
 
 #cell1 {background-color: #fff}
-#cell2 {background-color: #E8E7ED; color:#FFFEC9;}
-#cell3 {background-color: #000000; color:#ffffff;}
-#cell4 {background-color: #283A00}
+#cell2 {background-color: #E8E7ED; color:#0B01A9;}
+#cell3 {background-color: #000000; color:#E1E1E1;}
+#cell4 {background-color: #283A00; color:#CBAE00;}
